add training pages bg class

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -7,3 +7,24 @@
 body {
     @apply font-text-montserrat;
 }
+
+.trainers-landing-page {
+    background-image: url('../../assets/images/trainers-page-spiral.png');
+    background-repeat: no-repeat;
+    background-size: 150px;
+    background-position: right 10%;
+}
+
+/* For large screens */
+@media (min-width: 1024px) {
+    .trainers-landing-page {
+        background-size: 150px;
+    }
+}
+
+/* For medium screens */
+@media (min-width: 768px) and (max-width: 1023px) {
+    .trainers-landing-page {
+        background-size: 150px;
+    }
+}
