fixed scroll to section on team and gallery sections

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -8,6 +8,10 @@ body {
     @apply font-text-montserrat;
 }
 
+html {
+    scroll-behavior: smooth;
+  }
+
 .trainers-landing-page {
     background-image: url('../../assets/images/trainers-page-spiral.png');
     background-repeat: no-repeat;
